--- a/sass-css/_General-Style.scss
+++ b/sass-css/_General-Style.scss
@@ -250,6 +250,7 @@ body {
 
       span {
         font-family: "Kenia", sans-serif;
+        color: $main-color;
       }
     }
 
@@ -281,6 +282,11 @@ body {
 font-size: 24pt;
         }
 
+        .image-container{
+          position: relative;
+          width: 26rem;
+          height: 26rem;
+
       img {
         box-shadow: 0 0 10px 5px $main-color;
         border-radius: 50%;
@@ -289,6 +295,23 @@ font-size: 24pt;
         transition: 0.5s;
         margin: 2rem 0;
       }
+
+      .circle-spin{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) rotate(0);
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        border-top: 0.2rem solid $bg-secundary;
+        border-bottom: 0.2rem solid $bg-secundary;
+        border-right: 0.2rem solid $main-color;
+        border-left: 0.2rem solid $main-color;
+        animation: RotationAbout 8s linear infinite;
+      }
+}
+
 
       hr {
         border: none;
@@ -352,5 +375,12 @@ font-size: 24pt;
   75%,
   81% {
     opacity: 0;
+  }
+}
+
+
+@keyframes RotationAbout{
+  100%{
+    transform: translate(-50%,-50%) rotate(360deg);
   }
 }
